[package]
name = "hello-axum-cf"
version = "0.1.0"
edition = "2021"
authors = [ "katopz <katopz@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.7", default-features = false, features = ["query"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
reqwest = { version = "0.12", features = ["json"] }
currency_rs = "1.3.0"
rand = "0.8"
anyhow = "1.0"
getrandom = { version="0.2", features = ["js"] }
axum-macros = "0.5.0"
