[package]
name = "mcp-memory"
version = "0.1.0"
edition = "2021"
authors = [ "katopz <katopz@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
# reqwest has been moved to dev-dependencies
currency_rs = "1.3.0"
rand = "0.8"
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] } # Ensure "js" feature for Wasm
serde_json = "1.0.140"
chrono = "0.4.41" # Used by previous versions, might be removable if not used by generic DO
md5 = "0.7.0" # Used by previous versions, might be removable if not used by generic DO
uuid = { version = "1.16.0", features = ["v4", "js"] } # Enable "js" feature for Wasm compatibility
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
async-trait = "0.1.88"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] } # For the e2e client example
tokio = { version = "1", features = ["full"] }    # For the e2e client example

[[example]]
name = "rust_e2e_client"
path = "examples/rust_e2e_client.rs"
required-features = [] # No special features needed from the library itself to run this example
