[package]
name = "dokg-memory"
version = "0.1.0"
edition = "2021"
authors = [ "katopz <katopz@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["mcp"]  # Make "mcp" a default feature
mcp = []           # Define the "mcp" feature

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
currency_rs = "1.3.0"
rand = { version = "0.8", default-features = false } # Ensure wasm-bindgen feature for Wasm
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] } # Ensure "js" feature for Wasm
serde_json = "1.0.140"
chrono = "0.4.41" 
md5 = "0.7.0" 
uuid = { version = "1.16.0", features = ["v4", "js"] } 
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100" 
wasm-bindgen-futures = "0.4.50" 
async-trait = "0.1.88" 
serde-wasm-bindgen = "0.6.5"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] } 
tokio = { version = "1", features = ["full"] }    

[[example]]
name = "rust_e2e_client"
path = "examples/rust_e2e_client.rs"
required-features = [] 

[[example]]
name = "mcp_e2e_client"
path = "examples/mcp_e2e_client.rs"
required-features = [] # Assuming "mcp" feature is default and thus not required here for example to run
